# termgame

./: Cargo.toml  README.md
examples/: simple.rs
src/: controller.rs  game.rs  game_error.rs  lib.rs  message.rs  styled_characters.rs
src/charview/: chunkmap.rs  mod.rs  screen_character.rs
